--- a/GestionVentas/bin/resources/AddUser.fxml
+++ b/GestionVentas/bin/resources/AddUser.fxml
@@ -15,7 +15,7 @@
 <!-- Vista gestion de usuarios - Agregar, ver, buscar -->
 <StackPane stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.UsersController">
     <HBox alignment="CENTER" spacing="50.0" HBox.hgrow="ALWAYS"> 
-        <VBox alignment="CENTER" spacing="20.0" styleClass="vbox">
+        <VBox alignment="CENTER" spacing="20.0" HBox.hgrow="ALWAYS" styleClass="vbox">
             <padding>
                 <Insets top="40.0" right="70.0" bottom="40.0" left="100.0" />
             </padding>
@@ -47,7 +47,7 @@
                 <Button text="Cancelar" prefHeight="25.0" prefWidth="68.0"/>
             </HBox>
         </VBox>
-        <VBox alignment="CENTER_LEFT" spacing="20.0" styleClass="vbox">
+        <VBox alignment="CENTER_LEFT" spacing="20.0" HBox.hgrow="ALWAYS" styleClass="vbox">
             <Label text="Buscar usuario" textAlignment="CENTER" textFill="WHITE">
                 <padding>
                     <Insets bottom="10.0" />
@@ -65,12 +65,12 @@
                 <Insets top="40.0" right="40.0" bottom="40.0" left="40.0" />
             </padding>
             <!-- Tabla que visualiza los usuarios -->
-            <TableView>
+            <TableView fx:id="tableView">
                 <columns>
-                    <TableColumn prefWidth="159.33331298828125" text="Nombre y apellido" />
-                    <TableColumn prefWidth="164.00003051757812" text="Documento" />
-                    <TableColumn prefWidth="145.33334350585938" text="Email" />
-                    <TableColumn prefWidth="130.66668701171875" text="Tipo usuario" />
+                    <TableColumn fx:id="nombreCol" prefWidth="159.33331298828125" text="Nombre y apellido" />
+                    <TableColumn fx:id="dniCol" prefWidth="164.00003051757812" text="Documento" />
+                    <TableColumn fx:id="emailCol" prefWidth="145.33334350585938" text="Email" />
+                    <TableColumn fx:id="tipoUsuarioCol" prefWidth="130.66668701171875" text="Tipo usuario" />
                 </columns>
             </TableView>
         </VBox>
