--- a/GestionVentas/bin/resources/LoginView.fxml
+++ b/GestionVentas/bin/resources/LoginView.fxml
@@ -8,8 +8,8 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-
-<StackPane prefHeight="450.0" prefWidth="400.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.LoginController">
+<!-- Vista del login -->
+<StackPane prefHeight="450.0" prefWidth="400.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controllers.LoginController">
     <VBox fx:id="logoLabelContainer" alignment="CENTER" spacing="20.0" styleClass="vbox" StackPane.alignment="CENTER">
         <!-- Imagen -->
         <ImageView fx:id="logoView" fitHeight="116.0" fitWidth="339.0" styleClass="image-view">
@@ -18,14 +18,14 @@
             </image>
         </ImageView>
         <!-- Campo DNI -->
-        <TextField fx:id="usernameField" alignment="TOP_LEFT" maxWidth="200.0" prefHeight="25.0" promptText="Usuario" />
+        <TextField fx:id="usernameField" maxWidth="200.0" prefHeight="35.0" promptText="Tipo de usuario" />
         <!-- Campo contraseña -->
-        <PasswordField fx:id="passwordField" maxWidth="200.0" prefHeight="25.0" promptText="Contraseña" />
-
+        <PasswordField fx:id="passwordField" maxWidth="200.0" prefHeight="35.0" promptText="Contraseña" />
+        <!-- Contenedor horizontal para botones -->
         <HBox alignment="CENTER" spacing="10" styleClass="hbox">
             <!-- Botones -->
-            <Button fx:id="btnLogin" onAction="#handleLogin" prefHeight="25.0" prefWidth="68.0" text="Ingresar" />
-            <Button fx:id="btnCancel" onAction="#handleCancel" prefHeight="25.0" prefWidth="61.0" text="Cancelar" textAlignment="CENTER" />
+            <Button fx:id="btnLogin" onAction="#handleLogin" prefHeight="30.0" prefWidth="70.0" text="Ingresar" textAlignment="CENTER"/>
+            <Button fx:id="btnOut" onAction="#handleCancel" prefHeight="30.0" prefWidth="70.0" text="Salir" textAlignment="CENTER" />
         </HBox>
     </VBox>
 </StackPane>
