--- a/GestionVentas/bin/resources/UserView.fxml
+++ b/GestionVentas/bin/resources/UserView.fxml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import app.UsersController?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -13,40 +12,8 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <!-- Vista gestion de usuarios - Agregar, ver, buscar -->
-<StackPane stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.UsersController">
+<StackPane fx:id="mainContent" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controllers.UserController">
     <HBox alignment="CENTER" spacing="50.0" HBox.hgrow="ALWAYS"> 
-        <VBox alignment="CENTER" spacing="20.0" HBox.hgrow="ALWAYS" styleClass="vbox">
-            <padding>
-                <Insets top="40.0" right="70.0" bottom="40.0" left="100.0" />
-            </padding>
-            <Label text="Nuevo usuario" textAlignment="CENTER" textFill="WHITE">
-                <padding>
-                    <Insets bottom="10.0" />
-                </padding>
-                <font>
-                    <Font name="System Bold Italic" size="15.0" />
-                </font>
-            </Label>
-            <!-- Campo nombre y apellido -->
-            <TextField fx:id="nomYapeField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Nombre y apellido" />
-            <!-- Campo dni -->
-            <TextField fx:id="dniField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="DNI" />
-            <!-- Campo email -->
-            <TextField fx:id="emailField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Correo electronico" />
-            <!-- Campo perfil -->
-            <MenuButton fx:id="perfilMenuButton" text="Tipo de perfil">
-                <items>
-                    <MenuItem fx:id="adminMenuItem" text="Administrador" onAction="#initialize" />
-                    <MenuItem fx:id="gerenteMenuItem" text="Gerente" onAction="#initialize" />
-                    <MenuItem fx:id="vendedorMenuItem" text="Vendedor" onAction="#initialize" />
-                </items>
-            </MenuButton>
-            <!-- Contenedor horizontal para botones -->
-            <HBox alignment="CENTER" spacing="10" styleClass="hbox">
-                <Button text="Agregar" onAction="#agregarUsuario" prefHeight="25.0" prefWidth="68.0"/>
-                <Button text="Cancelar" prefHeight="25.0" prefWidth="68.0"/>
-            </HBox>
-        </VBox>
         <VBox alignment="CENTER_LEFT" spacing="20.0" HBox.hgrow="ALWAYS" styleClass="vbox">
             <Label text="Buscar usuario" textAlignment="CENTER" textFill="WHITE">
                 <padding>
@@ -60,6 +27,7 @@
             <HBox>
                 <TextField fx:id="buscarUser" promptText="Nro documento" />
                 <Button fx:id="btnBuscarUser" text="Buscar" onAction="#buscarUsuario"/>
+                <Button fx:id="btnAñadir" text="Agregar usuario" onAction="#añadirUsuario"/>
             </HBox> 
             <padding>
                 <Insets top="40.0" right="40.0" bottom="40.0" left="40.0" />
