--- a/GestionVentas/src/resources/FormUser.fxml
+++ b/GestionVentas/src/resources/FormUser.fxml
@@ -9,32 +9,48 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+
 <!-- Vista dle formulario para agregar un nuevo usuario -->
 <StackPane fx:id="mainContentForm" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controllers.FormUserController">
-    <VBox alignment="CENTER" spacing="20.0" HBox.hgrow="ALWAYS" styleClass="vbox" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #f5deb3, #c7916b);">
-        <Button text="Volver" onAction="#cancelar" prefHeight="25.0" prefWidth="68.0"/>
-            <VBox alignment="CENTER" spacing="10.0" style="-fx-border-color: white; -fx-border-width: 2; -fx-border-radius: 10;" minWidth="400.0" maxWidth="400.0" maxHeight="500.0">
+    <VBox alignment="CENTER" style="-fx-background-color: #773939;" HBox.hgrow="ALWAYS">
+            <VBox alignment="CENTER" maxHeight="800.0" maxWidth="450.0" minWidth="400.0" spacing="10.0" styleClass="vbox-externo">
 
                 <padding>
                     <Insets top="40.0" right="50.0" bottom="40.0" left="50.0" />
                 </padding>
+
+                <ImageView fitHeight="80" fitWidth="80" preserveRatio="true">
+                    <image>
+                        <Image url="@files/usuario.png" />
+                    </image>
+                <VBox.margin>
+                <Insets top="25.0" />
+                </VBox.margin>
+                </ImageView>
                 
-                <Label text="Nuevo usuario" textAlignment="CENTER" textFill="WHITE">
+                <Label styleClass="texto-comun" text="Formulario de registro" textAlignment="CENTER" textFill="WHITE">
                     <padding>
                         <Insets bottom="10.0" />
                     </padding>
-                    <font>
-                        <Font name="System Bold Italic" size="15.0" />
-                    </font>
                 </Label>
-                <!-- Campo nombre y apellido -->
-                <TextField fx:id="nomYapeField" alignment="TOP_LEFT" prefWidth="100.0" prefHeight="30.0" maxWidth="200.0" promptText="Nombre y apellido" />
-                <!-- Campo contraseña -->
-                <TextField fx:id="contraseñaField" alignment="TOP_LEFT" prefWidth="100.0" prefHeight="30.0" maxWidth="200.0" promptText="Contraseña" />
-                <!-- Campo dni -->
-                <TextField fx:id="dniField" alignment="TOP_LEFT" prefWidth="100.0" prefHeight="30.0" maxWidth="200.0" promptText="DNI" />
-                <!-- Campo email -->
-                <TextField fx:id="emailField" alignment="TOP_LEFT" prefWidth="100.0" prefHeight="30.0" maxWidth="200.0" promptText="Correo electronico" />
+                <!-- Contenedor con los campos a completar para el registro del usuario -->
+                <VBox alignment="CENTER_LEFT" maxHeight="315.0" maxWidth="250.0" prefHeight="315.0" prefWidth="250.0" spacing="10.0" styleClass="vbox-interno">
+                    <!-- Campo nombre y apellido -->
+                    <Label styleClass="labels" text="Nombre y apellido" />
+                    <TextField fx:id="nombreField" alignment="TOP_LEFT" maxWidth="200.0" minWidth="100.0" prefHeight="30.0" prefWidth="100.0" promptText="Nombre y apellido" />
+                    <!-- Campo contraseña -->
+                    <Label styleClass="labels" text="Contraseña" />
+                    <TextField fx:id="passwordField" alignment="TOP_LEFT" maxWidth="200.0" minWidth="100.0" prefHeight="30.0" prefWidth="156.0" promptText="Contraseña" />
+                    <!-- Campo documento -->
+                    <Label styleClass="labels" text="Documento" />
+                    <TextField fx:id="dniField" alignment="TOP_LEFT" maxWidth="200.0" minWidth="100.0" prefHeight="30.0" prefWidth="100.0" promptText="Correo electronico" />
+                    <!-- Campo email -->
+                    <Label styleClass="labels" text="Correo electronico" />
+                    <TextField fx:id="emailField" alignment="TOP_LEFT" maxWidth="200.0" minWidth="100.0" prefHeight="30.0" prefWidth="100.0" promptText="Corre electronico" />
+                    <padding>
+                        <Insets bottom="5.0" left="25.0" right="25.0" />
+                    </padding>
+                </VBox>
                 <!-- Campo perfil -->
                 <MenuButton fx:id="perfilMenuButton" text="Tipo de perfil">
                     <items>
